# TestingGit

./: CMakeLists.txt  config.cfg
inc/: indexer.hpp  merger.hpp  processor.hpp  read_write.hpp  safe_queue.hpp  time_measure.hpp
scripts/: tester.py
src/: indexer.cpp  main.cpp  merger.cpp  processor.cpp  read_write.cpp  time_measure.cpp
